--- a/modules/html/mxr.html
+++ b/modules/html/mxr.html
@@ -5,7 +5,7 @@
         min="0"
         max="500"
         step="10"
-        value="20"
+        value="30"
         id="qty"> ml
 
     &emsp;
@@ -56,19 +56,21 @@
                 value="72"
                 id="nicBase"> mg/ml
                 <select id="nicType">
-                    <option value="VG">VG</option>
-                    <option value="PG">PG</option>
+                    <option value="vg">VG</option>
+                    <option value="pg">PG</option>
                 </select>
         </div>
 </div>
 
 <div class="box">
     Nicotine
-    <span id="nicPct"></span>
-</div>
-<div class="box">
-    VG
+    <span id="nicOut" class="right"></span>
 </div>
 <div class="box">
     PG
+    <span id="pgOut" class="right"></span>
+</div>
+<div class="box">
+    VG
+    <span id="vgOut" class="right"></span>
 </div>
