--- a/modules/html/mxr.html
+++ b/modules/html/mxr.html
@@ -1,6 +1,6 @@
 <div class="row">
     Bottle Size
-    <input 
+    <input
         type="number"
         min="0"
         max="500"
@@ -11,14 +11,14 @@
     &emsp;
 
     <div class="right">
-        PG <input 
+        PG <input
             type="number"
             min="0"
             max="100"
             step="10"
             value="20"
             id="pg">
-        VG <input 
+        VG <input
             type="number"
             min="0"
             max="100"
@@ -30,7 +30,7 @@
 <div class="row">
 
     Nicotine
-    <input 
+    <input
         type="number"
         min="0"
         max="100"
@@ -38,7 +38,7 @@
         value="10"
         id="mg"> mg/ml
     (Or
-    <input 
+    <input
         type="number"
         min="0"
         max="10"
@@ -48,7 +48,7 @@
 
         <div class="right">
             Nicotine Base
-            <input 
+            <input
                 type="number"
                 min="0"
                 max="100"
@@ -74,3 +74,8 @@
     VG
     <span id="vgOut" class="right"></span>
 </div>
+
+<div id="flavs"></div>
+
+<button id="add">Add Flavour</button>
+
