--- a/modules/html/flav.html
+++ b/modules/html/flav.html
@@ -6,20 +6,20 @@
     type="number"
     min="0"
     max="500"
-    step="1"
+    step="0.1"
     value="10"
-    class="qty"/> ml
-(Or
+    class="qty"/> <span>ml</span>
+<span>(Or</span>
 <input
     type="number"
     min="0"
-    max="10"
-    step="0.1"
+    max="100"
+    step="1"
     value="10"
-    class="pct"/> %)
+    class="pct"/> <span>%)</span> 
 <select class="nicType">
     <option value="vg">VG</option>
     <option value="pg">PG</option>
 </select>
 <button class="remove">Remove</button>
-<span class="out" class="right"></span>
+<span class="out"></span> 
