--- a/modules/html/flav.html
+++ b/modules/html/flav.html
@@ -3,6 +3,8 @@
     type="text"
     placeholder="Flavour name..."
     class="flavName"/>
+    <button class="flavInfo">Info</button>
+    <span class="info"></span>
 <input
     type="number"
     min="0"
