mixinfo loading + ejs loader

--- a/modules/html/flav.html
+++ b/modules/html/flav.html
@@ -1,10 +1,19 @@
 <div class="img"></div>
-<input
-    type="text"
-    placeholder="Flavour name..."
-    class="flavName"/>
-    <button class="flavInfo">Info</button>
-    <span class="info"></span>
+    <% if (mixinfo) { %>
+        <input
+            type="text"
+            placeholder="Flavour name..."
+            class="flavName"
+            value="<%= mixinfo.description %>"
+            style="background-image:url('https://8bitvape.co.uk/img/flavimg/<%= mixinfo.flavour %>.png')"
+            />
+        <button class="flavInfo">Info</button>
+    <% } else { %>
+        <input
+            type="text"
+            placeholder="Flavour name..."
+            class="flavName"/>
+    <% } %>
 <input
     type="number"
     min="0"
@@ -18,7 +27,7 @@
     min="0"
     max="100"
     step="1"
-    value="10"
+    value="<%= mixinfo?mixinfo.amount:10 %>"
     class="pct"/> <span>%)</span> 
 <select class="nicType">
     <option value="pg">PG</option>
@@ -26,3 +35,10 @@
 </select>
 <button class="remove">Remove</button>
 <span class="out"></span> 
+
+<% if (mixinfo) { %>
+    <span class="info">
+        <p><%- mixinfo.fulldesc %><p>
+        <span class="lbl"><%= mixinfo.company %></span>
+    </span>
+<% } %>
